name:                ChaCha20

version:             0.1.0.0

synopsis:            Unoptimized ChaCha20 in Haskell
-- description:         

license:             MIT
license-file:        LICENSE
author:              Christopher A. Wood
maintainer:          christopherwood07@gmail.com

category:            Cryptography
build-type:          Simple

cabal-version:       >=1.10

library
  -- Other library packages from which modules are imported.
  build-depends:       base >=4.8 && <4.9
  
  -- Directories containing source files.
  hs-source-dirs:      src
  
  -- Base language which the package is written in.
  default-language:    Haskell2010
  